# DMC3ArchipelagoClient

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
src/: archipelago.rs  asm_hook.rs  bank.rs  cache.rs  check_handler.rs  config.rs  connection_manager.rs  constants.rs  ddmk_hook.rs  exception_handler.rs  game_manager.rs  hint_game.rs  hook.rs  hudhook_hook.rs  imgui_bindings.rs  inputs.rs  item_sync.rs  lib.rs  location_handler.rs  locations.json  mapping.rs  save_handler.rs  skill_manager.rs  tables.rs  text_handler.rs  tracker.rs  ui.rs  utilities.rs
src/compat/: crimson_hook.rs  ddmk_hook.rs  imgui_bindings.rs  mod.rs
src/data/: dmc3_all.sav  game_structs.rs  locations.json  mod.rs  text_ps.hlsl  text_vs.hlsl
src/experiments/: egui.rs
src/hooks/: check_handler.rs  hook.rs  mod.rs  save_handler.rs  store_hook.rs
src/ui/: config.rs  crimson_hook.rs  ddmk_hook.rs  dx11_hooks.rs  egui_ui.rs  font_handler.rs  imgui_bindings.rs  inputs.rs  mod.rs  overlay.rs  text_handler.rs  ui.rs
