[package]
name = "DMC3ArchipelagoClient"
version = "0.3.0"
edition = "2024"

[lib]
name = "dmc3_randomizer"
crate-type = ["cdylib"]

[build-dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[dependencies]
archipelago_rs = { path = "../archipelago_rs" }
windows = { workspace = true, features = ["Win32_System_LibraryLoader", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Security", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Devices", "Win32_Devices_HumanInterfaceDevice", "Win32_Graphics_Direct3D9", "Win32_Graphics_Gdi", "Win32_System_SystemServices", "Win32_Graphics_Dwm", "Win32_System_WindowsProgramming", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_DirectWrite", "Win32_UI_HiDpi", "Win32_Graphics_Direct3D_Fxc"] }
randomizer_utilities = { path = "../randomizer_utilities" }
log = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
#imgui = { version = "0.12.0" }
imgui-sys = { version = "0.12.0" }
minhook = "0.8.0"
strum_macros = "0.27"
fontdue = "0.9.3"
serde_path_to_error = "0.1.20"
bitflags = "2.10.0"